syntax = "proto3";

option go_package = "/protos";

import "google/api/annotations.proto";


service UserManagement {
  rpc Login (LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
           post: "/v1/login"
           body: "*"
    };
  }
  rpc Register (RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/v1/register"
      body: "*"
    };
  }
}

message LoginRequest {
  string email    = 1;
  string password = 2;
}
message LoginResponse {
  string token = 1;
  string refresh_token = 2;
}

message RegisterRequest {
  string name     = 1;
  string email    = 2;
  string password = 3;
}

message RegisterResponse {
  uint64 id       = 1;
  string email    = 2;
}
